prevent desktop menu wrapping

--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -156,7 +156,7 @@ header {
       text-overflow: ellipsis;
       white-space: nowrap;
       display: inline-block;
-      padding: 0.5rem 1rem;
+      padding: 0.5rem 1rem 0.5rem 0;
       font-family: $inter-bold;
       font-size: $txt-sm;
       text-align: right;
